fixed mobile nav bug, styled scrollbar

--- a/style.css
+++ b/style.css
@@ -57,6 +57,22 @@ body {
   font-family: var(--raleway-font);
 }
 
+/* scrollbar */
+
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+ 
+body::-webkit-scrollbar-track {
+  background-color: var(--black);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: var(--white-darker);
+  /* outline: 1px solid slategrey; */
+  border-radius: 50px;
+}
+
 /* global styles */
 
 .heading {
